# identifiers

./: Cargo.toml  LICENSE  Makefile  README.md
identifiers-derive/: Cargo.toml
identifiers-derive/src/: lib.rs
identifiers-uri/: Cargo.toml
identifiers-uri/src/: lib.rs
identifiers-uri/tests/: derives.rs
identifiers-uri/tests/ui/: uri_bad_allowed_values.rs  uri_bad_allowed_values.stderr  uri_not_newtype.rs  uri_not_newtype.stderr  uri_wrong_type.rs  uri_wrong_type.stderr
identifiers-uuid/: Cargo.toml
identifiers-uuid/src/: lib.rs
identifiers-uuid/tests/: derives.rs
identifiers-uuid/tests/ui/: uuid_bad_allowed_values.rs  uuid_bad_allowed_values.stderr  uuid_not_newtype.rs  uuid_not_newtype.stderr  uuid_wrong_type.rs  uuid_wrong_type.stderr
scripts/: publish.bash
src/: lib.rs
tests/: derives.rs
tests/ui/: integer_bad_allowed_values.rs  integer_bad_allowed_values.stderr  integer_not_newtype.rs  integer_not_newtype.stderr  integer_wrong_type.rs  integer_wrong_type.stderr  string_bad_allowed_values.rs  string_bad_allowed_values.stderr  string_not_newtype.rs  string_not_newtype.stderr  string_pub_field.rs  string_pub_field.stderr  string_wrong_type.rs  string_wrong_type.stderr
