[package]
name = "identifiers"
version = "0.1.0"
edition = "2021"
description = "Type safe identifiers in Rust"
license = "MIT"
repository = "https://github.com/ahammel/identifiers"
readme = "README.md"
keywords = ["identifier", "newtype", "typesafe", "derive"]
categories = ["rust-patterns"]

[workspace]
members = ["identifiers-derive", "identifiers-uuid", "identifiers-uri"]

[dependencies]
identifiers-derive = { path = "identifiers-derive", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0.116"
