[package]
name = "identifiers-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for the identifiers crate"
license = "MIT"
repository = "https://github.com/ahammel/identifiers"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
