[package]
name = "identifiers-derive"
version = "0.1.1"
edition = "2021"
description = "Derive macros for the identifiers crate"
license = "MIT"
repository = "https://github.com/ahammel/identifiers"
readme = "../README.md"
keywords = ["identifier", "newtype", "typesafe", "derive"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["derive"] }
quote = "1"
proc-macro2 = "1"
