[package]
name = "identifiers-uri"
version = "0.1.0"
edition = "2021"
description = "UriIdentifier trait and derive macro"
license = "MIT"
repository = "https://github.com/ahammel/identifiers"

[dependencies]
fluent-uri = "0.4.1"
identifiers-derive = { path = "../identifiers-derive", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0.116"
