[package]
name = "identifiers-uri"
version = "0.1.1"
edition = "2021"
description = "UriIdentifier trait and derive macro"
license = "MIT"
repository = "https://github.com/ahammel/identifiers"
readme = "../README.md"
keywords = ["identifier", "newtype", "typesafe", "derive", "uri"]
categories = ["rust-patterns"]

[dependencies]
fluent-uri = "0.4.1"
identifiers-derive = { path = "../identifiers-derive", version = "0.1.1" }

[dev-dependencies]
trybuild = "1.0.116"
